apps/gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: networking
  labels:
    app.kubernetes.io/name: gateway
